--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Fundamentos de Javascript</title>
 </head>
 <body>
-    <h1>Holaaaaa mundo</h1>
-    <script src="./scr/JS/app.js" type="text/javascript"></script>
+    <h1>Holaaaaa mundddddddo</h1>
+    <script src="./src/js/app.js"></script>
 </body>
 </html>
