--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Holaaaaa mundddddddo</h1>
-    <script src="./src/js/variables.js"></script>
+    <script src="./src/js/objetos.js"></script>
 </body>
 </html>
