--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./src/js/primitivos.js">
+    <script src="./src/js/objetos.js">
     </script>
 </body>
 </html>
